add protocol relative url for google font

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,7 +5,7 @@ $light_green: lightgreen;
 $dark_green: #528C4B;
 $mobile_breakpoint: 640px;
 
-@import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(//fonts.googleapis.com/css?family=Lato);
 
 * {
   box-sizing: border-box;
