set viewport and fix css issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Bitcrap - The store of the future</title>
-  <meta name="description" content="Buy random mail order gifts with Bitcoin."
+  <meta name="description" content="Buy random mail order gifts with Bitcoin.">
+  <meta name=viewport content="width=device-width, initial-scale=1"
   <meta charset="utf-8">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
