--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,7 +3,8 @@
 $dark_green: green;
 $light_green: lightgreen;
 $dark_green: #528C4B;
-$mobile_breakpoint: 640px;
+$tablet_breakpoint: 640px;
+$mini_breakpoint: 380px;
 
 @import url(//fonts.googleapis.com/css?family=Lato);
 
@@ -407,7 +408,7 @@ a {
   animation-duration: 2s;
 }
 
-@media screen and (max-width: $mobile_breakpoint) {
+@media screen and (max-width: $tablet_breakpoint) {
   .hide_mobile {
     display: none;
   }
@@ -436,5 +437,19 @@ a {
 
   .featurette .sub-featurette {
     padding: 0 2px;
+  }
+
+  .form-inline {
+    .form-control {
+      display: inline-block;
+      margin: 5px 0;
+      width: 32.7%;
+    }
+  }
+}
+
+@media screen and (max-width: $mini_breakpoint) {
+  .radio-buttons-main-label {
+    display: block;
   }
 }
