--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,8 +6,6 @@ $dark_green: #528C4B;
 $tablet_breakpoint: 640px;
 $mini_breakpoint: 380px;
 
-@import url(//fonts.googleapis.com/css?family=Lato);
-
 * {
   box-sizing: border-box;
 }
@@ -15,7 +13,7 @@ $mini_breakpoint: 380px;
 body {
   background-color: white;
   font-size: 14px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;//'Lato', sans-serif;
 }
 
 // utilities
@@ -129,7 +127,7 @@ body {
 
   .directions {
     padding: 5px 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: #EEE;
   }
 
@@ -157,6 +155,10 @@ body {
   border-radius: 5px;
 }
 
+.amount-box {
+  margin-bottom: 4px;
+}
+
 .radio-buttons {
   font-size: 16px;
   background-color: #FFCD5F;
@@ -182,7 +184,7 @@ body {
   .form-control {
     display: inline-block;
     margin: 5px 0;
-    width: 32.8%;
+    width: 32.5%;
   }
 }
 
@@ -443,7 +445,7 @@ a {
     .form-control {
       display: inline-block;
       margin: 5px 0;
-      width: 32.7%;
+      width: 32.5%;
     }
   }
 }
