add disclaimer and minor styling updates

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -216,6 +216,10 @@ body {
   }
 }
 
+.btn-primary {
+  font-weight: bold;
+}
+
 // lists
 
 // tables
@@ -264,6 +268,10 @@ a {
 .start-over {
   padding-top: 10px;
   text-align: center;
+}
+
+.disclaimer {
+  color: lightgray;
 }
 
 // animations
