--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
   <div class="showcase">
     <%= image_tag 'box_question_mark.jpg' %>
 
-    <h2>Customer Testimonials</h2>
+    <h2>Customer Testimonials*</h2>
     <h3>George Washington</h3>
     <em class="location">Washington, D.C.</em>
     <p>
@@ -34,6 +34,7 @@
     <p>
       "I can fly women in from all over the world, I have tigers as pets, but nothing excites me more than receiving a gift from Bitcrap."
     </p>
+    <p class="disclaimer">* Although it should go without saying, these testimonials are not real and for comedic purposes only.</p>
   </div>
   <div id="checkout" class="checkout-box">
     <div class="directions">
