--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <h3>Pay Between $1 and $10 (in Bitcoin) and receive a fun, surprise gift in the mail.</h3>
     <h4>Receiver will get a brand new product that is useful or fun.</h4>
   </div>
-  <div class="showcase">
+  <div class="showcase container">
     <%= image_tag 'box_question_mark.jpg' %>
 
     <h2>Customer Testimonials*</h2>
@@ -36,7 +36,7 @@
     </p>
     <p class="disclaimer">* Although it should go without saying, these testimonials are not real and for comedic purposes only.</p>
   </div>
-  <div id="checkout" class="checkout-box">
+  <div id="checkout" class="container checkout-box">
     <div class="directions">
       <ol class="directions-list">
         <li>Select Amount to spend (The higher the amount, the cooler the gift)</li>
