--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </script>
 </head>
   <body>
-    <div class="outer-container">
+    <div class="container outer-container">
       <div class="masthead">
         <div class="logo masthead-box">
           <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
@@ -28,7 +28,7 @@
           <h2 class="hide_mobile">The Store of the Future</h2>
         </div>
       </div>
-      <div class="inner-container">
+      <div class="container inner-container">
         <%= yield %>
       </div>
       <div class="footer">
