add bitcoin logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <div class="logo masthead-box">
           <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
         </div>
+        <%= image_tag 'btc_logo.svg', class: 'btc-logo', width: 40 %>
         <div class="tagline masthead-box">
           <h2 class="hide_mobile">The Store of the Future</h2>
         </div>
