add random tagline and dimensions for image to make rendering faster

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     <h4>Receiver will get a brand new product that is useful or fun.</h4>
   </div>
   <div class="showcase container">
-    <%= image_tag 'box_question_mark.jpg' %>
+    <%= image_tag 'box_question_mark.jpg', height: 225, width: 280 %>
 
     <h2>Customer Testimonials*</h2>
     <h3>George Washington</h3>
