--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <%= image_tag 'btc_logo.svg', class: 'btc-logo', width: 40 %>
 
         <div class="tagline masthead-box">
-          <h2 class="hide_mobile">The Store of the Future</h2>
+          <h2 class="hide_mobile"><%= @tagline %></h2>
           <div class="fb-like"
             data-href="https://bitcrap.com"
             data-layout="button" data-action="like"
