--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 <div class="main-container">
   <div class="business-description">
     <h2>Tired of knowing what you're buying? We can help!</h2>
-    <h3>Pay Between $1 and $10 (in Bitcoin) and receive a fun, surprise gift in the mail.</h3>
-    <h4>Receiver will get a brand new product that is useful or fun.</h4>
+    <h3>Pay $1 to $10 (in BTC) and get a brand new <span class="underline">fun</span> or <span class="underline">useful</span> gift in the mail.</h3>
+    <h4>(We promise it won't actually be crappy)</h4>
   </div>
   <div class="showcase container">
     <%= image_tag 'box_question_mark.jpg', height: 225, width: 280 %>
